--- a/source/_posts/判断苹果手机型号.md
+++ b/source/_posts/判断苹果手机型号.md
@@ -3,3 +3,70 @@ title: 判断苹果手机型号
 date: 2021-08-02 18:35:36
 tags:
 ---
+
+## 工作中所用到的对于 iPhone 各类机型的准确识别
+
+```js
+//判断是否为IOS
+var isIOS =
+  /^(iPhone|iPad|iPod|Pike)/gi.test(navigator.platform) ||
+  !!userAgent.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/);
+
+//判断微信：
+var isWeiXin = /MicroMessenger/i.test(navigator.userAgent);
+
+//判断安卓：
+var isAndroid = userAgent.indexOf("Android") > -1 || userAgent.indexOf("Adr") > -1;
+
+//判断PC端：
+var isPC = /^(Win)/ig.test(navigator.platform) || userAgent.indexOf("Windows NT ") > 0;
+
+//iPhone 6/6s/7/8
+let isIPhone6 =
+  /iphone/gi.test(window.navigator.userAgent) &&
+  window.devicePixelRatio &&
+  window.devicePixelRatio === 3 &&
+  window.screen.width === 375 &&
+  window.screen.height === 667;
+
+//iPhone 6p/6sp/7p
+let isIPhone6p =
+  /iphone/gi.test(window.navigator.userAgent) &&
+  window.devicePixelRatio &&
+  window.devicePixelRatio === 3 &&
+  window.screen.width === 414 &&
+  window.screen.height === 736;
+
+// iPhone X、iPhone XS
+let isIPhoneX =
+  /iphone/gi.test(window.navigator.userAgent) &&
+  window.devicePixelRatio &&
+  window.devicePixelRatio === 3 &&
+  window.screen.width === 375 &&
+  window.screen.height === 812;
+
+// iPhone XS Max
+let isIPhoneXSMax =
+  /iphone/gi.test(window.navigator.userAgent) &&
+  window.devicePixelRatio &&
+  window.devicePixelRatio === 3 &&
+  window.screen.width === 414 &&
+  window.screen.height === 896;
+
+// iPhone XR
+let isIPhoneXR =
+  /iphone/gi.test(window.navigator.userAgent) &&
+  window.devicePixelRatio &&
+  (window.devicePixelRatio === 2) & (window.screen.width === 414) &&
+  window.screen.height === 896;
+
+console.log(isIPhone6);
+console.log(isIPhone6p);
+console.log(isIPhoneX);
+console.log(isIPhoneXSMax);
+console.log(isIPhoneXR);
+
+/*************************End*******************************/
+```
+
+原文链接:[https:/www.baidu.com](https:/www.baidu.com)
